# trading-engine

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  DOCUMENTATION.md  FRONTEND_STARTUP.md  LICENSE  README.md  SETUP.md  build.sh  changes  server.js
backtest/: README.md  orchestrator.py
brokers/: README.md
frontend/: README.md  package-lock.json  package.json  server.js  vite.config.ts
frontend/public/: ticks.jsonl
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: candleQuery.ts  engineWS.ts
frontend/src/components/: AccountPanel.tsx  ConnectionStatus.tsx  EngineStatusPanel.tsx  ErrorBoundary.tsx  OrdersPanel.tsx  PositionsPanel.tsx  PriceChart.tsx  QueryStatus.tsx
frontend/src/hooks/: useCandleQuery.ts  useChartZoom.ts  useEngineConnection.ts  useMockTickStream.ts
frontend/src/store/: chartStore.ts  eventStore.ts  orderStore.ts  tickStore.ts
frontend/src/utils/: timeBuckets.ts
include/adapters/: BrokerMarketData.hpp  DemoMarketData.hpp  KrakenFileReplayAdapter.hpp  ProviderMarketData.hpp  README.md
include/brokers/: DemoBroker.hpp  NullBroker.hpp  README.md
include/engine/: CandlePersister.hpp  CandleStore.hpp  ChartAggregator.hpp  Engine.hpp  EventBus.hpp  IBroker.hpp  IMarketData.hpp  IStrategy.hpp  InstrumentRegistry.hpp  MarketDataTypes.hpp  ProviderMarketData.hpp  Types.hpp
include/plugins/: PluginLoader.hpp
include/server/: FrontendBridge.hpp
include/strategies/: MovingAverage.hpp  NullStrategy.hpp
include/support/: CMakeLists.txt  HttpClient.hpp  WebSocketClient.hpp
scripts/: README.md  kraken_day_capture.py  polygon_flat_file.py  ws_price_viewer.py
src/: main.cpp
src/adapters/: BrokerMarketData.cpp  CMakeLists.txt
src/brokers/: CMakeLists.txt  NullBroker.cpp  test_nullbroker.cpp
src/engine/: CMakeLists.txt  CandleStore.cpp  Engine.cpp  EventBus.cpp
src/plugins/: CMakeLists.txt  PluginLoader.cpp
src/server/: CMakeLists.txt  FrontendBridge.cpp
src/strategies/: CMakeLists.txt  MovingAverage.cpp
src/support/: CMakeLists.txt  HttpClient.cpp  WebSocketClient.cpp
strategies/: README.md
tests/: README.md
